# looptools

./: .gitignore  LICENSE  MANIFEST.in  README.md  auxiliary.py  component.py  components.py  dimension.py  dsp.py  loop.py  loopmath.py  mokulaserlock.py  nprolaserlock.py  pll.py  plots.py  pyproject.toml  simulation.py
loopkit/: __init__.py  component.py  loop.py  loopmath.py  plots.py  simulation.py  vectfit3.py
loopkit/components/: __init__.py  _opamp.py  actuators.py  controllers.py  delay.py  filters.py  gains.py  pll_components.py  rate.py
loopkit/loops/: __init__.py  laserlock.py  pll.py  (+2 more)
looptools/: __init__.py  component.py  components.py  dimension.py  dsp.py  loop.py  loopmath.py  mokulaserlock.py  nprolaserlock.py  pll.py  plots.py  simulation.py  utils.py  vectfit3.py
notebooks/: 0.0_looptools-pll-vs-pypm.ipynb  0.0_pll-demo.ipynb  0.0_quickstart.ipynb  0.1_looptools-pll-vs-pypm.ipynb  0.1_npro-laser-lock-demo.ipynb  0.1_pll-demo.ipynb  0.2_npro-laser-lock-demo.ipynb  0.3_plots.ipynb  0.4_extrapolation.ipynb  0.5_vector-fitting.ipynb  0.6_IIR-LPF.ipynb  0.7_mixer.ipynb  0.8_dimension.ipynb  0.9_loop-stability.ipynb  1.0_laser-lock.ipynb  1.0_moku-laser-lock.ipynb  1.1_PID-control.ipynb  1.2_Moku-PID-control.ipynb  1.3_Moku-laser-lock.ipynb  1.4_laser-lock-pll.ipynb  1.5_rate-transition.ipynb  2.0_parameter-sweeps.ipynb
tests/: __init__.py  conftest.py  generate_pll_golden.py  test_component.py  test_controllers.py  test_dimension.py  test_dsp.py  test_filters.py  test_loop.py  test_loopmath.py  test_multirate_laserlock.py  test_pll.py  test_rate.py
(+17 files in other folders)
